--- a/style.css
+++ b/style.css
@@ -60,12 +60,14 @@ body {
 #c2,
 #c3,
 #c4 {
-    width: 20vw;
-    height: 500px;
+    width: 250px;
+    height: 440px;
     left: 20%;
+    display: flex;
 }
+
 img {
-    height:300px;
+    height: 300px;
 }
 
 #w1,
