--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 #carousel-control-prev1 {
+    border-radius: 10px;
     width: 40px;
     height: 40px;
     background-color: black;
@@ -17,6 +18,7 @@ body {
 }
 
 #carousel-control-next1 {
+    border-radius: 10px;
     width: 40px;
     height: 40px;
     background-color: black;
@@ -24,16 +26,18 @@ body {
 }
 
 .carousel-control-prev {
-    width: 5vw;
-    height: 5vh;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
     background-color: black;
     top: 50%;
     left: -4%;
 }
 
 .carousel-control-next {
-    width: 5vw;
-    height: 5vh;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
     background-color: black;
     top: 50%;
     left: 99%;
@@ -61,8 +65,8 @@ body {
 #c2,
 #c4 {
     width: 60%;
-    height: 440px;
     left: 20%;
+    height: auto;
 }
 
 img {
@@ -94,8 +98,7 @@ img {
     #c4 {
         width: 80%;
         height: 440px;
-        left: 20%;
-        display: flex;
+        left: 30%;
     }
 }
 
